# je-parody

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
frontend/: .dockerignore  .env.example  Dockerfile  package.json  pnpm-lock.yaml  vite.config.ts
frontend/context/: AuthContext.tsx  SocketContext.tsx
frontend/hooks/: useBoardSaveState.tsx  useClueState.ts  useTextEditor.tsx
frontend/routes/: Buzzer.tsx  EditBoard.tsx  EndGame.tsx  Error.tsx  HomePage.tsx  PlayBoard.tsx  ProtectedRoute.tsx  SetupPlayBoard.tsx  WaitingRoom.tsx
frontend/src/: App.tsx  index.css  main.tsx  socket.ts
frontend/styles/: App.css  Buzzer.css  ClueCell.css  CrossSiteHeader.css  EndGame.css  HomePage.css  JeopardyBoard.css  Login.css  Profile.css  TextEditor.css  WYSIWYG.css  WaitingRoom.css  muiStyled.tsx
frontend/types/: app.ts  clue.ts  index.ts
frontend/ui/: CrossSiteHeader.tsx  JeopardyBoard.tsx  Login.tsx  Signup.tsx  WYSIWYG.tsx
rust-server/: Cargo.toml  Dockerfile
rust-server/migrations/: 01_user_state.sql  02_clues_questions_state.sql  20251231022645_create_users_table.sql  20251231022704_create_jeopardy_questions_table.sql
rust-server/src/: main.rs
rust-server/src/database/: mod.rs
rust-server/src/extractors/: mod.rs  optional_user.rs  user.rs
rust-server/src/misc/: slug.rs
rust-server/src/models/: board.rs  clues.rs  game.rs  gamestate.rs  mod.rs  questions.rs  user.rs
rust-server/src/routes/: board.rs  clues.rs  media.rs  mod.rs  questions.rs  users.rs
rust-server/src/socket/: handlers.rs  misc.rs  mod.rs  state.rs
(+32 files in other folders)
