[package]
name = "rust-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
axum-macros = "0.4"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }
tower-http = {version = "0.6.2", features = ["cors"]}
dotenvy = "0.15.7"
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0.228"
tower-cookies = "0.11.0"
bcrypt = "0.15"
uuid = { version = "1.19.0", features = ["v4", "serde"]}
reqwest = { version = "0.12", features = ["json"] }
rand = "0.9.2"